--- a/glossary.tex
+++ b/glossary.tex
@@ -62,12 +62,12 @@
 \newglossaryentry{step}
 {
     name=Step,
-    description=When the ISS executes one instruction, or the instructions move to the next pipeline stage.
+    description=When the ISS executes one instruction\, or the instructions move to the next pipeline stage.
 }
 
 \newglossaryentry{checkpoint}{
     name=checkpoint,
-    despcription=Points along the execution the processor can revert to, where the state of the processor has been stored.
+    description=Points along the execution the processor can revert to\, where the state of the processor has been stored.
 }
 
 % --------------------
@@ -101,6 +101,8 @@
 \newacronym{dm}{DM}{Debug Module}
 \newacronym{clic}{CLIC}{Core-Local Interrupt Controller}
 \newacronym{clint}{CLINT}{Core Local Interrupt Controller}
+\newacronym{dpi}{DPI}{Direct Programming Interface}
+\newacronym{abv}{ABV}{Assertion-Based Verification}
 
 
 
