--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[british,titlepage,oneside]{ntnuthesis}
+\documentclass[british,titlepage]{ntnuthesis}
 
 %\usepackage{todonotes}
 \usepackage{tabularx}
@@ -11,14 +11,111 @@
 %\usepackage{subfig}
 
 \usepackage{svg}
+\usepackage{fontawesome}
+\usepackage[shortcuts]{extdash}
+
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
+\usepackage{subcaption}
+
+\usepackage{colortbl}
+\usepackage{xcolor}
+
+
+%\definecolor{vgreen}{RGB}{104,180,104}
+%\definecolor{vblue}{RGB}{49,49,255}
+%\definecolor{vorange}{RGB}{255,143,102}
+%
+%\definecolor{codegreen}{rgb}{0,0.6,0}
+%\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+%\definecolor{awesome}{rgb}{1.0, 0.13, 0.32}
+%\definecolor{ao}{rgb}{0.0, 0.0, 1.0}
+%
+%\lstset{
+%  basicstyle   = \ttfamily,
+%  basicstyle   =\ttfamily\footnotesize,
+%  numbers      = left,
+%  numberstyle  = \scriptsize\sffamily\color{gray},
+%  showstringspaces = false,
+%  %float,
+%  backgroundcolor = \color{backcolour},
+%  keywordstyle=\color{awesome},
+%  identifierstyle=\color{ao},
+%  commentstyle=\color{vgreen},
+%  stringstyle=\color{codegreen},
+%  numberstyle=\tiny\color{gray},
+%  numbersep=10pt,
+%  tabsize=8,
+%  %showspaces=false,
+%  %frame=trBL,
+%  %moredelim=*[s][\colorIndex]{[}{]},
+%  %literate=*{:}{:}1
+%  %caption={Implemented SystemVerilog Code},
+%  %aptionpos=b, 
+%  %label={example}
+%}
+
+% VS2017 C++ color scheme
+%\definecolor{clr-background}{RGB}{255,255,255}
+%\definecolor{clr-text}{RGB}{0,0,0}
+%\definecolor{clr-string}{RGB}{163,21,21}
+%\definecolor{clr-namespace}{RGB}{0,0,0}
+%\definecolor{clr-preprocessor}{RGB}{128,128,128}
+%\definecolor{clr-keyword}{RGB}{0,0,255}
+%\definecolor{clr-type}{RGB}{43,145,175}
+%\definecolor{clr-variable}{RGB}{0,0,0}
+%\definecolor{clr-constant}{RGB}{111,0,138} % macro color
+%\definecolor{clr-comment}{RGB}{0,128,0}
+%
+%\lstset{
+%	backgroundcolor=\color{clr-background},
+%	basicstyle=\color{clr-text}, % any text
+%	stringstyle=\color{clr-string},
+%	identifierstyle=\color{clr-variable}, % just about anything that isn't a directive, comment, string or known type
+%	commentstyle=\color{clr-comment},
+%	directivestyle=\color{clr-preprocessor}, % preprocessor commands
+%	% listings doesn't differentiate between types and keywords (e.g. int vs return)
+%	% use the user types color
+%	keywordstyle=\color{clr-type},
+%	keywordstyle={[2]\color{clr-constant}}, % you'll need to define these or use a custom language
+%	tabsize=4
+%}
+
+%\definecolor{codegreen}{rgb}{0,0.6,0}
+%\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+%\definecolor{codepurple}{rgb}{0.58,0,0.82}
+%\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+%
+%\lstdefinestyle{mystyle}{
+%    backgroundcolor=\color{backcolour},   
+%    commentstyle=\color{codegreen},
+%    keywordstyle=\color{magenta},
+%    numberstyle=\tiny\color{codegray},
+%    stringstyle=\color{codepurple},
+%    basicstyle=\ttfamily\footnotesize,
+%    breakatwhitespace=false,         
+%    breaklines=true,                 
+%    captionpos=b,                    
+%    keepspaces=true,                 
+%    numbers=left,                    
+%    numbersep=5pt,                  
+%    showspaces=false,                
+%    showstringspaces=false,
+%    showtabs=false,                  
+%    tabsize=2
+%}
+%
+%\lstset{style=VS2017}
 
 \usepackage{pgfgantt}
 \definecolor{blue}{HTML}{74BBC9}
 \definecolor{yellow}{HTML}{F7E967}
 
+\newcommand{\cpp}{C\texttt{++} }
+
 \newcommand{\sv}[1]{\lstinline{#1}} %systemverilog code
 \newcommand{\rv}[1]{\lstinline{#1}} %riscv instructions, csrs etc
-\newcommand{\ccode}[1]{\lstinline{#1}} %c code
+\newcommand{\ccode}[1]{\lstinline[breaklines=true]{#1}} %c code
 \newcommand{\file}[1]{\lstinline{#1}}
 \newcommand{\dir}[1]{\lstinline{#1}}
 
@@ -35,7 +132,7 @@
 {}
 
 \lstnewenvironment{clisting}[1][]
-{\lstset{language=c,
+{\lstset{language=C++,
         #1
         }}
 {}
@@ -59,6 +156,8 @@
 
 %\addbibresource{thesis.bib}
 %\addbibresource{bib/Formal.bib}
+
+\AtEveryCitekey{\clearfield{pages}}
 \addbibresource{bib/MyLibrary.bib}
 
 \input{glossary.tex} % add glossary and acronym lists before document
@@ -75,8 +174,9 @@
 \listoftables
 \lstlistoflistings
 
-\printglossary[type=\acronymtype] % Print acronyms
-\printglossary                    % Print glossary
+%\printglossary[type=\acronymtype] % Print acronyms
+%\printglossary                    % Print glossary
+%\tmp{Trenger jeg glossary?}
 
 \input{chapters/1-introduction}
 
@@ -115,6 +215,8 @@
 %\input{chapters/papers.tex}
 
 \appendix
+\input{appendices/a_onespin}
+\input{appendices/spike-implementation}
 
 %\input{template/2-usage}
 %\input{template/3-structure}
