--- a/glossary.tex
+++ b/glossary.tex
@@ -1,7 +1,7 @@
 
 % From https://www.overleaf.com/learn/latex/Glossaries
 
-\makeglossaries % Prepare for adding glossary entries
+%\makeglossaries % Prepare for adding glossary entries
 
 
 \newglossaryentry{ps}
