--- a/bib/MyLibrary.bib
+++ b/bib/MyLibrary.bib
@@ -338,6 +338,26 @@
   file = {/home/torje/Zotero/storage/34N8R8SU/Clark and Hoult - 2017 - rv8 a high performance RISC-V to x86 binary trans.pdf}
 }
 
+@online{CorevverifVendorRiscv,
+  title = {Core-v-Verif/Vendor/Riscv/Riscv-Isa-Sim at Master · Openhwgroup/Core-v-Verif},
+  url = {https://github.com/openhwgroup/core-v-verif/tree/master/vendor/riscv/riscv-isa-sim},
+  urldate = {2024-06-07},
+  keywords = {notion},
+  file = {/home/torje/Zotero/storage/WBHHEMGP/riscv-isa-sim.html}
+}
+
+@online{CVA6CSRSpike,
+  title = {{{CVA6 CSR}} Spike Discrepancies List · {{Issue}} \#1346 · Openhwgroup/Cva6},
+  date = {2023},
+  url = {https://github.com/openhwgroup/cva6/issues/1346},
+  urldate = {2024-06-10},
+  abstract = {HI, Please find the below list of CSRs which has discrepancies between CVA6 and spike Sl no Name Address Offset Width Access Type Reset Value Display Name STATUS COMMENT 1 sstatus 0x100 32 RW 0x000...},
+  langid = {english},
+  organization = {GitHub},
+  keywords = {notion},
+  file = {/home/torje/Zotero/storage/T4LKKR4N/1346.html}
+}
+
 @inproceedings{davideschiavoneSlowSteadyWins2017,
   title = {Slow and Steady Wins the Race? {{A}} Comparison of Ultra-Low-Power {{RISC-V}} Cores for {{Internet-of-Things}} Applications},
   shorttitle = {Slow and Steady Wins the Race?},
@@ -723,6 +743,16 @@
   organization = {GitHub},
   keywords = {notion},
   file = {/home/torje/Zotero/storage/EBUKYGH7/2082.html}
+}
+
+@online{JasperFormalVerification,
+  title = {Jasper {{Formal Verification Platform}}},
+  url = {https://www.cadence.com/en_US/home/tools/system-design-and-verification/formal-and-static-verification.html},
+  urldate = {2024-06-08},
+  abstract = {Formal verification apps at the C/C++ and RTL level that can be used at every stage of the design cycle.},
+  langid = {english},
+  keywords = {notion},
+  file = {/home/torje/Zotero/storage/6ZTAW3KS/formal-and-static-verification.html}
 }
 
 @inproceedings{jebaliEnsuringConsistencyCycleAccurate2018,
@@ -1363,6 +1393,25 @@
   file = {/home/torje/Zotero/storage/VB5QS2A9/index.html}
 }
 
+@online{QuestaAdvancedSimulator,
+  title = {Questa {{Advanced Simulator}} | {{Siemens Software}}},
+  url = {https://eda.sw.siemens.com/en-US/ic/questa/simulation/advanced-simulator/},
+  urldate = {2024-06-08},
+  keywords = {notion},
+  file = {/home/torje/Zotero/storage/EHMQCTCA/advanced-simulator.html}
+}
+
+@online{QuestaFormalVerification,
+  title = {Questa {{Formal Verification Apps}} - {{Exhaustive Solutions}} for {{Verification Challenges}}},
+  url = {https://eda.sw.siemens.com/en-US/ic/questa/formal-verification/},
+  urldate = {2024-06-08},
+  abstract = {Questa Formal Verification Apps deliver powerful formal analysis capabilities to design \& verification engineers familiar with formal and assertion-based methodologies.},
+  langid = {english},
+  organization = {Siemens Digital Industries Software},
+  keywords = {notion},
+  file = {/home/torje/Zotero/storage/E62MYX4J/formal-verification.html}
+}
+
 @article{ReferenceManualOneSpin,
   title = {Reference {{Manual}}: {{OneSpin}} 360 {{Version}} 2021.2.3},
   author = {{OneSpin Solutions GmbH}},
@@ -1391,6 +1440,18 @@
   langid = {english},
   keywords = {notion},
   file = {/home/torje/Zotero/storage/77P6JKUU/riscv-spec-issues.html}
+}
+
+@online{Release17Remsproject2023,
+  title = {Release 0.17 · Rems-Project/Sail},
+  date = {2023-10-31},
+  url = {https://github.com/rems-project/sail/releases/tag/0.17},
+  urldate = {2024-06-10},
+  abstract = {CHANGES: Performance improvements This release is primarily intended to fix performance issues. Overall the Sail to C compilation can be almost 10x faster, and consumes significantly less memory. O...},
+  langid = {english},
+  organization = {GitHub},
+  keywords = {notion},
+  file = {/home/torje/Zotero/storage/JLDT8VVZ/0.html}
 }
 
 @inproceedings{reshadiInstructionSetCompiled2003,
@@ -1545,6 +1606,16 @@
   file = {/home/torje/Zotero/storage/CSD4ZU7H/risc-v-vs-arm-a-comprehensive-comparison-of-processor-architectures.html}
 }
 
+@dataset{siliconlabsincOBI,
+  title = {{{OBI}}},
+  author = {{Silicon Labs, Inc}},
+  date = {2023},
+  number = {v1.6.0-1},
+  publisher = {https://github.com/openhwgroup/obi/},
+  url = {https://github.com/openhwgroup/obi/blob/main/OBI-v1.6.0.pdf},
+  keywords = {notion}
+}
+
 @book{spearSystemVerilogVerificationGuide2012,
   title = {{{SystemVerilog}} for {{Verification}}: {{A Guide}} to {{Learning}} the {{Testbench Language Features}}},
   shorttitle = {{{SystemVerilog}} for {{Verification}}},
@@ -1616,6 +1687,15 @@
   pagetotal = {704},
   keywords = {Operating systems (Computers)},
   file = {/home/torje/Zotero/storage/YQR3D7WH/Stallings - 2018 - Operating systems internals and design principles.pdf}
+}
+
+@online{SupportSystemVerilogCompilation2024,
+  title = {Support for {{SystemVerilog}} Compilation Using Sail -Sv · {{Issue}} \#424 · Riscv/Sail-Riscv},
+  date = {2024-03-04},
+  url = {https://github.com/riscv/sail-riscv/issues/424},
+  urldate = {2024-06-10},
+  keywords = {notion},
+  file = {/home/torje/Zotero/storage/885LN9BG/424.html}
 }
 
 @online{symbioticedaRiscvformalDocsRvfi2020,
