--- a/appendices/spike-implementation.tex
+++ b/appendices/spike-implementation.tex
@@ -61,7 +61,7 @@
 \item \textbf{Issue:} \lstinline{mstatus} mismatch \lstinline{core = 0x00201880 and rm = 0x00200080}
   \begin{description}
     \item[Problem:] The difference is \lstinline{MPP = 3} for core and 0 for RM.
-    \item[\textbf{TODO:}] \tmp{This is not solved yet}
+    \item[\textbf{TODO:}] This is not solved yet
   \end{description}
   
 \item \textbf{Issue:} CSRs are wrong in hello world test
