--- a/bib/MyLibrary.bib
+++ b/bib/MyLibrary.bib
@@ -339,15 +339,18 @@
 }
 
 @online{CorevverifVendorRiscv,
-  title = {Core-v-Verif/Vendor/Riscv/Riscv-Isa-Sim at Master · Openhwgroup/Core-v-Verif},
+  title = {Spike {{RISC-V ISA Simulator}}},
+  author = {{OpenHW Group}},
+  date = {2024-04-30},
   url = {https://github.com/openhwgroup/core-v-verif/tree/master/vendor/riscv/riscv-isa-sim},
   urldate = {2024-06-07},
+  organization = {Github},
   keywords = {notion},
   file = {/home/torje/Zotero/storage/WBHHEMGP/riscv-isa-sim.html}
 }
 
 @online{CVA6CSRSpike,
-  title = {{{CVA6 CSR}} Spike Discrepancies List · {{Issue}} \#1346 · Openhwgroup/Cva6},
+  title = {{{CVA6 CSR}} Spike Discrepancies List},
   date = {2023},
   url = {https://github.com/openhwgroup/cva6/issues/1346},
   urldate = {2024-06-10},
@@ -465,7 +468,7 @@
 }
 
 @online{evancoxAddDocumentationLowlevel2017,
-  title = {Add Documentation of Low-Level Spike Internals · {{Issue}} \#145 · Riscv-Software-Src/Riscv-Isa-Sim},
+  title = {Add Documentation of Low-Level Spike Internals},
   author = {{Evan Cox}},
   date = {2017-10-21},
   url = {https://github.com/riscv-software-src/riscv-isa-sim/issues/145},
@@ -733,7 +736,7 @@
 }
 
 @online{ISSMismatchPending2023,
-  title = {{{ISS}}: [{{Mismatch}}] {{Pending}} Debug Request with Nmip and Dret Fails to Detect Debug Mode as Valid next State · {{Issue}} \#2082 · Openhwgroup/Core-v-Verif},
+  title = {{{ISS}}: [{{Mismatch}}] {{Pending}} Debug Request with Nmip and Dret Fails to Detect Debug Mode as Valid next State},
   shorttitle = {{{ISS}}},
   date = {2023-07-26},
   url = {https://github.com/openhwgroup/core-v-verif/issues/2082},
@@ -747,6 +750,8 @@
 
 @online{JasperFormalVerification,
   title = {Jasper {{Formal Verification Platform}}},
+  author = {{Cadence Design Systems, Inc}},
+  date = {2024},
   url = {https://www.cadence.com/en_US/home/tools/system-design-and-verification/formal-and-static-verification.html},
   urldate = {2024-06-08},
   abstract = {Formal verification apps at the C/C++ and RTL level that can be used at every stage of the design cycle.},
@@ -1181,9 +1186,10 @@
   file = {/home/torje/Zotero/storage/RDGJZ4Z4/User_Manual.pdf}
 }
 
-@online{openhwgroupCorevverifCv32e40sBsp,
-  title = {Core-v-Verif/Cv32e40s/Bsp at Master · Openhwgroup/Core-v-Verif},
+@online{openhwgroupBoardSupportPackage,
+  title = {Board {{Support Package}} ({{BSP}}) for {{CV32E40S Verification}}},
   author = {{OpenHW Group}},
+  date = {2021-12-02},
   url = {https://github.com/openhwgroup/core-v-verif/tree/master/cv32e40s/bsp},
   urldate = {2024-02-15},
   abstract = {Functional verification project for the CORE-V family of RISC-V cores. - openhwgroup/core-v-verif},
@@ -1193,8 +1199,8 @@
   file = {/home/torje/Zotero/storage/WSMFB5Y3/bsp.html}
 }
 
-@software{openhwgroupCv32e40s2024,
-  title = {Cv32e40s},
+@online{openhwgroupCv32e40s2024,
+  title = {{{CV32E40S}}},
   namea = {{OpenHW Group}},
   nameatype = {collaborator},
   date = {2024-03-13T12:43:29Z},
@@ -1202,80 +1208,88 @@
   url = {https://github.com/openhwgroup/cv32e40s},
   urldate = {2024-03-22},
   abstract = {4 stage, in-order, secure RISC-V core based on the CV32E40P},
-  organization = {OpenHW Group},
+  organization = {Github},
   keywords = {notion}
 }
 
 @online{openhwgroupCV32E4SimulationTestbench2022,
-  title = {{{CV32E4}}* {{Simulation Testbench}} and {{Environment}} — {{CORE-V Verification Strategy}} Documentation},
+  title = {{{CV32E4}}* {{Simulation Testbench}} and {{Environment}}},
   namea = {{OpenHW Group}},
   nameatype = {collaborator},
   date = {2022},
   url = {https://docs.openhwgroup.org/projects/core-v-verif/en/latest/cv32_env.html},
   urldate = {2023-10-16},
+  organization = {CORE-V Verification Strategy},
   keywords = {notion},
   file = {/home/torje/Zotero/storage/H7HFT8L9/cv32_env.html}
 }
 
 @online{openhwgroupDebugTriggerCOREV2023,
-  title = {Debug \& {{Trigger}} — {{CORE-V CV32E40S User Manual}} Documentation},
+  title = {Debug \& {{Trigger}}},
   author = {{OpenHW Group}},
   date = {2023},
   url = {https://cv32e40s-user-manual.readthedocs.io/en/latest/debug.html},
   urldate = {2024-04-17},
+  organization = {CORE-V CV32E40S User Manual},
+  keywords = {notion},
   file = {/home/torje/Zotero/storage/7CKB5WQE/debug.html}
 }
 
 @online{openhwgroupExceptionsInterruptsCOREV2023,
-  title = {Exceptions and {{Interrupts}} — {{CORE-V CV32E40S User Manual}} Documentation},
+  title = {Exceptions and {{Interrupts}}},
   author = {{OpenHW Group}},
   date = {2023},
   url = {https://cv32e40s-user-manual.readthedocs.io/en/latest/exceptions_interrupts.html},
   urldate = {2024-04-17},
+  organization = {CORE-V CV32E40S User Manual},
+  keywords = {notion},
   file = {/home/torje/Zotero/storage/2HWSXJWW/exceptions_interrupts.html}
 }
 
 @online{openhwgroupIntroductionCOREVCV32E40S2023,
-  title = {Introduction - {{CORE-V CV32E40S User Manual}} Documentation},
+  title = {Introduction},
   author = {{OpenHW Group}},
   date = {2023},
   url = {https://docs.openhwgroup.org/projects/cv32e40s-user-manual/en/latest/intro.html},
   urldate = {2024-04-04},
+  organization = {CORE-V CV32E40S User Manual},
   keywords = {notion}
 }
 
 @online{openhwgroupOpenhwgroupCorevverif2023,
-  title = {Openhwgroup/Core-v-Verif},
+  title = {Core-v-Verif},
   author = {{OpenHW Group}},
-  date = {2023},
+  date = {2024},
   url = {https://github.com/openhwgroup/core-v-verif},
-  urldate = {2023-09-11},
+  urldate = {2024-05-25},
   abstract = {Functional verification project for the CORE-V family of RISC-V cores. - openhwgroup/core-v-verif at cv32e40s/dev},
   langid = {english},
-  organization = {GitHub},
+  organization = {Github},
   keywords = {notion},
   file = {/home/torje/Zotero/storage/MC5B2TXA/dev.html}
 }
 
 @online{openhwgroupPipelineDetailsCOREV2023,
-  title = {Pipeline {{Details}} — {{CORE-V CV32E40S User Manual}} Documentation},
+  title = {Pipeline {{Details}}},
   namea = {{OpenHW Group}},
   nameatype = {collaborator},
   date = {2023},
   url = {https://cv32e40s-user-manual.readthedocs.io/en/latest/pipeline.html},
   urldate = {2023-12-12},
-  organization = {CORE-V CV32E40S User Manual documentation},
+  organization = {CORE-V CV32E40S User Manual},
   keywords = {notion},
   file = {/home/torje/Zotero/storage/VFN5V858/pipeline.html}
 }
 
 @online{openhwgroupRISCVFormalInterface2023,
-  title = {{{RISC-V Formal Interface}} — {{CORE-V CV32E40S User Manual}} Documentation},
+  title = {{{RISC-V Formal Interface}}},
   namea = {{OpenHW Group}},
   nameatype = {collaborator},
   date = {2023},
   url = {https://docs.openhwgroup.org/projects/cv32e40s-user-manual/en/latest/rvfi.html},
   urldate = {2024-02-21},
+  organization = {CORE-V CV32E40S User Manual},
+  keywords = {notion},
   file = {/home/torje/Zotero/storage/2JUP3FKH/rvfi.html}
 }
 
@@ -1334,7 +1348,7 @@
 }
 
 @article{pauldonahueRISCVDebugSupport2023,
-  title = {{{RISC-V Debug Support}}, Version 1.0-{{STABLE}}, F5b2ed3bb0eefcca075e99f3a8eece06e8d60063},
+  title = {{{RISC-V Debug Support}}, Version 1.0-{{STABLE}}},
   editor = {{Paul Donahue} and {Ventana Micro Systems} and {Tim Newsome} and {SiFive, Inc.}},
   date = {2023-10-12},
   url = {https://github.com/riscv/riscv-debug-spec/blob/51f5a29c0126d69f314079fb4f1197876aca7622/riscv-debug-stable.pdf},
@@ -1402,12 +1416,13 @@
 }
 
 @online{QuestaFormalVerification,
-  title = {Questa {{Formal Verification Apps}} - {{Exhaustive Solutions}} for {{Verification Challenges}}},
+  title = {Questa {{Formal Verification Apps}}},
+  author = {{Siemens}},
+  date = {2024},
   url = {https://eda.sw.siemens.com/en-US/ic/questa/formal-verification/},
   urldate = {2024-06-08},
   abstract = {Questa Formal Verification Apps deliver powerful formal analysis capabilities to design \& verification engineers familiar with formal and assertion-based methodologies.},
   langid = {english},
-  organization = {Siemens Digital Industries Software},
   keywords = {notion},
   file = {/home/torje/Zotero/storage/E62MYX4J/formal-verification.html}
 }
@@ -1443,7 +1458,7 @@
 }
 
 @online{Release17Remsproject2023,
-  title = {Release 0.17 · Rems-Project/Sail},
+  title = {Release 0.17},
   date = {2023-10-31},
   url = {https://github.com/rems-project/sail/releases/tag/0.17},
   urldate = {2024-06-10},
@@ -1490,9 +1505,9 @@
   file = {/home/torje/Zotero/storage/G7LTURS6/history.html}
 }
 
-@software{riscv-verificationRISCVVerificationInterface2023,
+@online{riscv-verificationRISCVVerificationInterface2023,
   title = {{{RISC-V Verification Interface}} ({{RVVI}})},
-  author = {{riscv-verification}},
+  author = {{Imperas}},
   date = {2023-09-27T10:53:48Z},
   origdate = {2021-01-18T13:32:04Z},
   url = {https://github.com/riscv-verification/RVVI},
@@ -1511,6 +1526,7 @@
 
 @online{RISCVSailModel2023,
   title = {{{RISCV Sail Model}}},
+  author = {{RISC-V International}},
   date = {2023-09-26T01:21:20Z},
   origdate = {2018-11-27T15:24:33Z},
   url = {https://github.com/riscv/sail-riscv},
@@ -1608,10 +1624,9 @@
 
 @dataset{siliconlabsincOBI,
   title = {{{OBI}}},
-  author = {{Silicon Labs, Inc}},
+  author = {{Silicon Labs}},
   date = {2023},
   number = {v1.6.0-1},
-  publisher = {https://github.com/openhwgroup/obi/},
   url = {https://github.com/openhwgroup/obi/blob/main/OBI-v1.6.0.pdf},
   keywords = {notion}
 }
@@ -1632,6 +1647,7 @@
 
 @online{SpikeRISCVISA2023,
   title = {Spike {{RISC-V ISA Simulator}}},
+  author = {{RISC-V International}},
   date = {2023-09-07T21:53:09Z},
   origdate = {2011-08-26T20:00:24Z},
   url = {https://github.com/riscv-software-src/riscv-isa-sim},
@@ -1690,7 +1706,7 @@
 }
 
 @online{SupportSystemVerilogCompilation2024,
-  title = {Support for {{SystemVerilog}} Compilation Using Sail -Sv · {{Issue}} \#424 · Riscv/Sail-Riscv},
+  title = {Support for {{SystemVerilog}} Compilation Using Sail -Sv},
   date = {2024-03-04},
   url = {https://github.com/riscv/sail-riscv/issues/424},
   urldate = {2024-06-10},
@@ -1699,9 +1715,8 @@
 }
 
 @online{symbioticedaRiscvformalDocsRvfi2020,
-  title = {Riscv-Formal/Docs/Rvfi.Md at Master · {{SymbioticEDA}}/Riscv-Formal},
-  namea = {{SymbioticEDA}},
-  nameatype = {collaborator},
+  title = {{{RISC-V Formal Interface}} ({{RVFI}})},
+  author = {{SymbioticEDA}},
   date = {2020},
   url = {https://github.com/SymbioticEDA/riscv-formal/blob/master/docs/rvfi.md},
   urldate = {2023-10-16},
@@ -1745,9 +1760,11 @@
 }
 
 @online{TestProgramsCOREV,
-  title = {Test {{Programs}} — {{CORE-V Verification Strategy}} Documentation},
+  title = {Test {{Programs}}},
   url = {https://docs.openhwgroup.org/projects/core-v-verif/en/latest/test_programs.html#virtual-peripherals},
   urldate = {2024-04-29},
+  organization = {CORE-V CV32E40S User Manual},
+  keywords = {notion},
   file = {/home/torje/Zotero/storage/WB4PNITL/test_programs.html}
 }
 
