--- a/glossary.tex
+++ b/glossary.tex
@@ -87,7 +87,7 @@
 \newacronym{rvfi}{RVFI}{RISC-V Formal Interface}
 \newacronym{rvvi}{RVVI}{RISC-V Verification Interface}
 \newacronym{bsp}{BSP}{Board Support Package}
-\newacronym{gpr}{GPR}{General purpose registers}
+\newacronym{gpr}{GPR}{General Purpose Registers}
 \newacronym{pc}{PC}{Program Counter}
 \newacronym{if}{IF}{Instruction Fetch}
 \newacronym{id}{ID}{Instruction Decode}
@@ -97,7 +97,7 @@
 \newacronym{csr}{CSR}{Control and Status Register}
 \newacronym{vip}{VIP}{Verification IP}
 \newacronym{nmi}{NMI}{Non Maskable Interrupts}
-\newacronym{dsa}{DSA}{domain-specific architectures}
+\newacronym{dsa}{DSA}{Domain-Specific Architectures}
 \newacronym{dm}{DM}{Debug Module}
 \newacronym{clic}{CLIC}{Core-Local Interrupt Controller}
 \newacronym{clint}{CLINT}{Core Local Interrupt Controller}
